# MIC-Object-Detection-Workshop

./: README.md  base.py  pyproject.toml
static/: styles.css
templates/: index.html  preview.html  styles.css
