[tool.poetry]
name = "micobjdet"
version = "0.1.0"
description = ""
authors = ["lilNewbie <alanjacobanil007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
werkzeug = "^2.3.6"
opencv-python = "^4.7.0.72"
pytest-shutil = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
